-- Config.ini -- Docketfile -- env variable for url

--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,10 @@
-[Production]
-url = '<insert url here>'  # Insert your tally server url here
+[Tally]
+url = http://192.168.1.125:9002
 
-# DEBUG = True for development
+[Flask]
+host = 0.0.0.0
+port = 50
+
+[Data]
+dataloc = /Data
+
